Limited bevel causes edges to move incorrectly (2.75 regression) #45331

Closed
opened 2015-07-05 22:59:47 +02:00 by Jason Clarke · 9 comments

System Information
OS X 10.10.4, AMD 5770

Blender Version
Broken: 2.75 official (and 2.75.2 15c301f)
Worked: 2.74

Short description of error
Using the bevel modifier's limit feature causes some edges to "pop out of place" and move slightly, messing up shading.

Exact steps for others to reproduce the error
See attached bevel_warp.blend file. Play with the limit settings on the bevel modifier, notice how "angle" limit mode causes the mesh to distort. If you view the model from top-ortho and toggle the modifier visibility on and off, you can clearly see it's not a shading artifact and the modifier is actually moving edges when it shouldn't be.

bevel_warp.blend

**System Information** OS X 10.10.4, AMD 5770 **Blender Version** Broken: 2.75 official (and 2.75.2 15c301f) Worked: 2.74 **Short description of error** Using the bevel modifier's limit feature causes some edges to "pop out of place" and move slightly, messing up shading. **Exact steps for others to reproduce the error** See attached bevel_warp.blend file. Play with the limit settings on the bevel modifier, notice how "angle" limit mode causes the mesh to distort. If you view the model from top-ortho and toggle the modifier visibility on and off, you can clearly see it's not a shading artifact and the modifier is actually moving edges when it shouldn't be. [bevel_warp.blend](https://archive.blender.org/developer/F202886/bevel_warp.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey
Howard Trickey was assigned by Sergey Sharybin 2015-07-06 12:05:07 +02:00

@howardt, do you mind having a look into this report? Thanks! :)

@howardt, do you mind having a look into this report? Thanks! :)
Member

Yes, I can see the problem and will work on a fix.

Yes, I can see the problem and will work on a fix.

This issue was referenced by 791b5fe9d0

This issue was referenced by 791b5fe9d0c47460700b5725faff687f892f06cf
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Thanks for the report.
I think this fix should go into a 2.75a release, if possible.

Thanks for the report. I think this fix should go into a 2.75a release, if possible.

This issue was referenced by 8cc0fe733a

This issue was referenced by 8cc0fe733abe4e7bd19140d06a59477bcbb923f7
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45331
No description provided.