Fix T45331, a bevel regression for 2.75.

Got bad results when two beveled edges form straight line
and there are two or more unbeveled edges attached to either
side of the connecting vertex.